--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
 name: Main
 
 on:
-  workflow_dispatch:
+  release:
+    types:
+      - created
 
 jobs:
 
@@ -9,21 +11,5 @@ jobs:
     name: my script
     runs-on: ubuntu-latest
     steps:
-      - name: shellcheck?
-        run: which shellcheck & shellcheck --version || true   
-      - name: docker?
-        run: which docker && docker --version && docker-compose --version || true    
-      - name: jq?
-        run: which jq && jq --version || true    
-      - name: perl?
-        run: which perl && perl --version || true     
-      - name: lua?
-        run: which lua && lua -v || true      
-      - name: go?
-        run: which go && go version || true
-      - name: node?
-        run: which node && node --version || true
-      - name: python?
-        run: which python && python --version || true
-      - name: php?
-        run: which php && php --version || true        
+      - name: print 
+        run: echo ${{ toJSON(github) }}
