--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: print 
-        run: echo ${{ toJSON(github) }}
+        run: echo ${{ toJSON(github.ref_name) }}
