--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -12,4 +12,4 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: fetch the binary
-        run: echo "${{github.event.workflow_run}}"
+        run: echo "${{toJSON(github.event.workflow_run)}}"
