--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: print 
-        run: echo xxx "${{ toJSON(github) }}" xxx
+        run: echo xxx "${{ toJSON(github.event.release.tag_name) }}" xxx
       - name: build
         run: head -c 1026 /dev/random | base64 > mybinary_${{github.ref_name}}.bin
       - name: upload binary as artifact
